--- a/onepage/index.html
+++ b/onepage/index.html
@@ -135,78 +135,18 @@ Our Works
 	</div>
 	
 	<div class="project-wrapper">
-	
-		<figure class="mix work-item branding">
-			<img src="img/works/item-1.jpg" alt="">
+
+		{%  assign works = (site.work | sort: 'sort')  %}
+		{% for work in works %}
+		<figure class="mix work-item {{ work.class }}">
+			<img src="img/works/{{ work.image }}" alt="">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-1.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
+				<a class="fancybox" rel="works" title="{{ work.caption }}" href="img/works/{{ work.image }}"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>{{ work.title }}</h4>
+				<p>{{ work.description }}</p>
 			</figcaption>
 		</figure>
-		
-		<figure class="mix work-item web">
-			<img src="img/works/item-2.jpg" alt="">
-			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-2.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
-			</figcaption>
-		</figure>
-		
-		<figure class="mix work-item logo-design">
-			<img src="img/works/item-3.jpg" alt="">
-			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-3.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
-			</figcaption>
-		</figure>
-		
-		<figure class="mix work-item photography">
-			<img src="img/works/item-4.jpg" alt="">
-			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-4.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
-			</figcaption>
-		</figure>
-	
-		<figure class="mix work-item branding">
-			<img src="img/works/item-5.jpg" alt="">
-			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-5.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
-			</figcaption>
-		</figure>
-		
-		<figure class="mix work-item web">
-			<img src="img/works/item-6.jpg" alt="">
-			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-6.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
-			</figcaption>
-		</figure>
-		
-		<figure class="mix work-item logo-design">
-			<img src="img/works/item-7.jpg" alt="">
-			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-7.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
-			</figcaption>
-		</figure>
-		
-		<figure class="mix work-item photography">
-			<img src="img/works/item-8.jpg" alt="">
-			<figcaption class="overlay">
-				<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-8.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Labore et dolore magnam</h4>
-				<p>Photography</p>
-			</figcaption>
-		</figure>
+		{% endfor %}
 		
 	</div>
 
