Update to the Fund Investments headers.

--- a/revelance/index.html
+++ b/revelance/index.html
@@ -2,8 +2,8 @@
 layout: revelance
 title: Revelance
 permalink: /revelance/
+published: true
 ---
-
 
 <section id="abdev_main_slider">
     <div id="rev_slider_1_1_wrapper" class="rev_slider_wrapper fullscreen-container"
@@ -125,7 +125,7 @@ permalink: /revelance/
                         <div class="revel_icon_boxed">
                             <i class="entypo-screen"></i>
                         </div>
-                        <h3>Web Development</h3>
+                        <h3>VENTURE CAPITAL</h3>
                     </div>
                     <p>The path of a cosmonaut is not an easy, triumphant march to glory. You have to get to know the
                         meaning not just of joy.</p>
@@ -141,7 +141,7 @@ permalink: /revelance/
                         <div class="revel_icon_boxed">
                             <i class="entypo-statistics"></i>
                         </div>
-                        <h3>Analystics</h3>
+                        <h3>GROWTH CAPITAL</h3>
                     </div>
                     <p>Dinosaurs are extinct today because they lacked opposable thumbs and the brainpower to build a
                         space program.</p>
@@ -157,7 +157,7 @@ permalink: /revelance/
                         <div class="revel_icon_boxed">
                             <i class="entypo-pie"></i>
                         </div>
-                        <h3>Database Structure</h3>
+                        <h3>PRIVATE EQUITY</h3>
                     </div>
                     <p>The path of a cosmonaut is not an easy, triumphant march to glory. You have to get to know the
                         meaning not just of joy.</p>
@@ -173,7 +173,7 @@ permalink: /revelance/
                         <div class="revel_icon_boxed">
                             <i class="entypo-megaphone"></i>
                         </div>
-                        <h3>Advertising</h3>
+                        <h3>HEDGE FUNDS</h3>
                     </div>
                     <p>Dinosaurs are extinct today because they lacked opposable thumbs and the brainpower to build a
                         space program.</p>
