--- a/revelance/index.html
+++ b/revelance/index.html
@@ -10,6 +10,40 @@ published: true
          style="background-color:#E9E9E9;padding:0px;">
         <div id="rev_slider_1_1" class="rev_slider fullscreenbanner" style="display:none;">
             <ul>
+                  <!-- SLIDE 0 -->
+                <li data-transition="fade" data-slotamount="7" data-masterspeed="300"
+                    data-thumb="images/s_wanzhou.jpg" data-saveperformance="off" data-title="Slide">
+                    <!-- MAIN BACKGROUND IMAGE -->
+                    <img src="images/s_wanzhou.jpg" alt="taxi" data-bgposition="center top" data-bgfit="cover"
+                         data-bgrepeat="no-repeat">
+                    <!-- LAYER NR. 1 -->
+                    <div class="tp-caption revelance-big tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
+                         data-hoffset="0" data-y="center" data-voffset="-100" data-speed="300" data-start="0"
+                         data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
+                         data-endelementdelay="0.1" data-endspeed="300"
+                         style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">
+                        Investments in Action
+                    </div>
+                    <!-- LAYER NR. 2 -->
+                    <div class="tp-caption revelance-small-with-lines lfr ltl tp-resizeme rs-parallaxlevel-10"
+                         data-x="center" data-hoffset="0" data-y="center" data-voffset="0" data-speed="300"
+                         data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
+                         data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
+                         style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
+                        Description about what Sagamore does.<br/>
+                        Lorem ipsum dolor sit, consectetur adipiscing <br/>
+                        Nulla tellus felis, ornare vel nulla non, porttitor congue enim vehicula vestibulum. <br/>
+                    </div>
+                    <!-- LAYER NR. 3 -->
+                    <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
+                         data-hoffset="0" data-y="center" data-voffset="80" data-speed="300" data-start="0"
+                         data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
+                         data-endelementdelay="0.1" data-endspeed="300"
+                         style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;">
+                    </div>
+                </li>
+
+
                 <!-- SLIDE 1 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="300"
                     data-thumb="images/taxi-320x200.jpg" data-saveperformance="off" data-title="Slide">
@@ -74,10 +108,10 @@ published: true
                 </li>
                 <!-- SLIDE 3 -->
                 <li data-transition="fade" data-slotamount="7" data-masterspeed="300"
-                    data-thumb="images/Untitled-1-e1399994290886-320x200.jpg" data-saveperformance="off"
+                    data-thumb="images/street.jpg" data-saveperformance="off"
                     data-title="Slide">
                     <!-- MAIN BACKGROUND IMAGE -->
-                    <img src="images/Untitled-1-e1399994290886.jpg" alt="Untitled-1-e1399994290886"
+                    <img src="images/street.jpg" alt="Untitled-1-e1399994290886"
                          data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption revelance-big tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
@@ -103,6 +137,39 @@ published: true
                          style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;">
                     </div>
                 </li>
+ <!-- SLIDE 4 -->
+                <li data-transition="fade" data-slotamount="7" data-masterspeed="300"
+                    data-thumb="images/construction.png" data-saveperformance="off"
+                    data-title="Slide">
+                    <!-- MAIN BACKGROUND IMAGE -->
+                    <img src="images/construction.png" alt="Untitled-1-e1399994290886"
+                         data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+                    <!-- LAYER NR. 1 -->
+                    <div class="tp-caption revelance-big tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
+                         data-hoffset="0" data-y="center" data-voffset="-100" data-speed="300" data-start="0"
+                         data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
+                         data-endelementdelay="0.1" data-endspeed="300"
+                         style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">
+                        REVELANCE STUDIOS
+                    </div>
+                    <!-- LAYER NR. 2 -->
+                    <div class="tp-caption revelance-small-with-lines lfr ltl tp-resizeme rs-parallaxlevel-10"
+                         data-x="center" data-hoffset="0" data-y="center" data-voffset="0" data-speed="300"
+                         data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
+                         data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
+                         style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
+                        BEST FEATURES JUST FOR YOU
+                    </div>
+                    <!-- LAYER NR. 3 -->
+                    <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
+                         data-hoffset="0" data-y="center" data-voffset="80" data-speed="300" data-start="0"
+                         data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
+                         data-endelementdelay="0.1" data-endspeed="300"
+                         style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;">
+                    </div>
+                </li>
+
+
             </ul>
             <div class="tp-bannertimer tp-bottom"></div>
         </div>
