Made updates to the opening slides for initial presentation to Sagamore.

--- a/revelance/index.html
+++ b/revelance/index.html
@@ -30,9 +30,7 @@ published: true
                          data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
                          data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
                          style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
-                        Description about what Sagamore does.<br/>
-                        Lorem ipsum dolor sit, consectetur adipiscing <br/>
-                        Nulla tellus felis, ornare vel nulla non, porttitor congue enim vehicula vestibulum. <br/>
+                        Investing in China to support today's consumption and tomorrow's innovation <br/>
                     </div>
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
@@ -56,7 +54,7 @@ published: true
                          data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
                          data-endelementdelay="0.1" data-endspeed="300"
                          style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">
-                        Investments in Action
+                      Peer to Peer Lending & Microfinance
                     </div>
                     <!-- LAYER NR. 2 -->
                     <div class="tp-caption revelance-small-with-lines lfr ltl tp-resizeme rs-parallaxlevel-10"
@@ -64,9 +62,8 @@ published: true
                          data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
                          data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
                          style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
-                        Description about what Sagamore does.<br/>
-                        Lorem ipsum dolor sit, consectetur adipiscing <br/>
-                        Nulla tellus felis, ornare vel nulla non, porttitor congue enim vehicula vestibulum. <br/>
+                        Providing Alternative Financial Services<br/>
+                       To build small business throughout China <br/>
                     </div>
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
@@ -88,7 +85,7 @@ published: true
                          data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
                          data-endelementdelay="0.1" data-endspeed="300"
                          style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">
-                        REVELANCE STUDIOS
+                        Investing in pharmaceuticals
                     </div>
                     <!-- LAYER NR. 2 -->
                     <div class="tp-caption revelance-small-with-lines lfr ltl tp-resizeme rs-parallaxlevel-10"
@@ -96,7 +93,7 @@ published: true
                          data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
                          data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
                          style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
-                        CRAFTING QUALITY PRODUCTS
+                    Developing novel medicines for global markets.
                     </div>
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
@@ -119,7 +116,7 @@ published: true
                          data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
                          data-endelementdelay="0.1" data-endspeed="300"
                          style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">
-                        REVELANCE STUDIOS
+                        High tech electronics
                     </div>
                     <!-- LAYER NR. 2 -->
                     <div class="tp-caption revelance-small-with-lines lfr ltl tp-resizeme rs-parallaxlevel-10"
@@ -127,7 +124,7 @@ published: true
                          data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
                          data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
                          style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
-                        BEST FEATURES JUST FOR YOU
+                        Investing in innovative electronics such as Xiaomi and Montage Technology
                     </div>
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
@@ -137,39 +134,6 @@ published: true
                          style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;">
                     </div>
                 </li>
- <!-- SLIDE 4 -->
-                <li data-transition="fade" data-slotamount="7" data-masterspeed="300"
-                    data-thumb="images/construction.png" data-saveperformance="off"
-                    data-title="Slide">
-                    <!-- MAIN BACKGROUND IMAGE -->
-                    <img src="images/construction.png" alt="Untitled-1-e1399994290886"
-                         data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-                    <!-- LAYER NR. 1 -->
-                    <div class="tp-caption revelance-big tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
-                         data-hoffset="0" data-y="center" data-voffset="-100" data-speed="300" data-start="0"
-                         data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
-                         data-endelementdelay="0.1" data-endspeed="300"
-                         style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">
-                        REVELANCE STUDIOS
-                    </div>
-                    <!-- LAYER NR. 2 -->
-                    <div class="tp-caption revelance-small-with-lines lfr ltl tp-resizeme rs-parallaxlevel-10"
-                         data-x="center" data-hoffset="0" data-y="center" data-voffset="0" data-speed="300"
-                         data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
-                         data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
-                         style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
-                        BEST FEATURES JUST FOR YOU
-                    </div>
-                    <!-- LAYER NR. 3 -->
-                    <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
-                         data-hoffset="0" data-y="center" data-voffset="80" data-speed="300" data-start="0"
-                         data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1"
-                         data-endelementdelay="0.1" data-endspeed="300"
-                         style="z-index: 4; max-width: auto; max-height: auto; white-space: nowrap;">
-                    </div>
-                </li>
-
-
             </ul>
             <div class="tp-bannertimer tp-bottom"></div>
         </div>
