--- a/revelance/index.html
+++ b/revelance/index.html
@@ -30,7 +30,7 @@ published: true
                          data-start="500" data-easing="Power3.easeInOut" data-splitin="none" data-splitout="none"
                          data-elementdelay="0.1" data-endelementdelay="0.1" data-end="5500" data-endspeed="300"
                          style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">
-                        Investing in China to support today's consumption and tomorrow's innovation <br/>
+                        Investing in China to support today's consumption and tomorrow's innovation. <br/>
                     </div>
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption revelance-button tp-fade tp-resizeme rs-parallaxlevel-10" data-x="center"
@@ -381,7 +381,7 @@ published: true
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <h4>General description about the Investment</h4>
+            <h4>General description about the Team</h4>
         </div>
     </header>
     <div class="revel_section_content">
