--- a/revelance/index.html
+++ b/revelance/index.html
@@ -528,7 +528,7 @@ published: true
         <div class="revel_container">
             <h3>Contact</h3>
 
-            <h4>General description about the Investments</h4>
+            <h4>General description about contacting</h4>
         </div>
     </header>
     <div class="revel_section_content">
