--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ published: true
         <div class="revel_container">
             <h3>Fund Investments</h3>
 
-            <p>General description about the Investments</p>
+            <p>General description about the Investment</p>
         </div>
     </header>
     <div class="revel_section_content">
