updated images and removed useless images

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@ published: true
                             </div>
                         </div>
                         <div class="overlay_back">
+                            <div class="image_container">
+                                <img src="{{ direct_investment.inversed_image }}" alt="{{ direct_investment.title }}">
+                            </div>
                             <div class="description">
                                 {{ direct_investment.description }}
-                            </div>
-                            <div class="image_container">
-                                <img src="{{ direct_investment.image }}" alt="{{ direct_investment.title }}">
                             </div>
                         </div>
                     </div>
