--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@ published: true
 
             <h4>General description about the Investments</h4>
             
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aut consequuntur cum debitis dicta dolorem est fugit impedit labore molestiae nisi numquam possimus, quae reiciendis sunt ullam velit voluptatem voluptatibus.</p>
-        </div>
-    </header>
+          <p>We invest in a range of private and public equity funds in order to access great investors at each stage of the capital and innovation cycle.</p>
     <div class="revel_section_content">
         <div class="revel_container">
             {% assign fund_investments = (site.fund_investments | sort: 'sort') %}
