--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ published: true
 
             <h4>General description about the Team</h4>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis in ipsam rem vitae. Aperiam deleniti error eum expedita, explicabo laborum quia sint tempore veritatis voluptate. Eos esse magnam ut!</p>
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six professionals are based in Beijing (sourcing and diligence), Hong Kong (investment analytics) and Shanghai (operations).</p>
         </div>
     </header>
     <div class="revel_section_content">
